tests/ui/linkage-attr/raw-dylib/windows/link-ordinal-not-foreign-fn.stderr
error: attribute should be applied to a foreign function or static
  --> $DIR/link-ordinal-not-foreign-fn.rs:1:1
   |
LL | #[link_ordinal(123)]
   | ^^^^^^^^^^^^^^^^^^^^

error: attribute should be applied to a foreign function or static
  --> $DIR/link-ordinal-not-foreign-fn.rs:5:1
   |
LL | #[link_ordinal(123)]
   | ^^^^^^^^^^^^^^^^^^^^

error: attribute should be applied to a foreign function or static
  --> $DIR/link-ordinal-not-foreign-fn.rs:9:1
   |
LL | #[link_ordinal(42)]
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

